[project]
name = "dropbox-syncer"
version = "0.1.0"
description = "Synchronize a local directory with a Dropbox folder using the Dropbox Python SDK"
authors = [
    {name = "Frédéric Devernay"}
]
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "dropbox>=11.36.0",
    "tqdm>=4.65.0"
]
readme = "README.md"

[project.scripts]
dropbox-syncer = "dropbox_syncer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dropbox_syncer.py"]
