[project]
name = "dropbox-syncer"
version = "0.1.0"
description = "Synchronize a local directory with a Dropbox folder using the Dropbox Python SDK"
authors = [
    {name = "Frédéric Devernay"}
]
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "dropbox>=11.36.0",
    "tqdm>=4.65.0"
]
readme = "README.md"

[project.scripts]
dropbox-syncer = "dropbox_syncer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dropbox_syncer.py"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = [
    "^__pycache__/.*",
]

[tool.pyright]
# ["off", "basic", "standard", "strict"]
typeCheckingMode = "basic"
exclude = ["**/__pycache__",
]
defineConstant = { DEBUG = true }

reportMissingImports = "warning"
reportMissingTypeStubs = false
reportPrivateImportUsage = false

pythonVersion = "3.10"
pythonPlatform = "Linux"


[tool.ruff]
line-length = 100
respect-gitignore = false
lint.select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "I",  # isort formatting.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
]
